# funding-call

./: .env.example  .gitignore  Makefile  README.md  docker-compose.base.yml  docker-compose.mysql.yml  docker-compose.prod.yml  docker-compose.psql.yml
.github/workflows/: backend_check.yml  build-image.yml  frontend_check.yml
backend/: manage.py  pyproject.toml
backend/editions/: apps.py  middleware.py  models.py  tests.py  views.py
backend/editions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_editionpublicdocument_uploaded_document_and_more.py
backend/formbuilder/: apps.py  models.py
backend/funding/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/orgs/: models.py
backend/orgs/migrations/: 0001_initial.py  0002_initial.py  0003_alter_organizationdocument_uploaded_document.py
backend/templates/: base.html
backend/users/: middleware  middleware.py  models.py
backend/users/management/commands/: seed_djangoadmin.py
backend/users/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_picture.py  0004_loginattempt.py
backend/utils/: encoder.py  models.py  storage.py  translation.py  views.py
docker/dockerfiles/: Dockerfile  Dockerfile.dev
docker/s6-rc.d/backend/: run
docker/s6-rc.d/cron/: run
docker/s6-rc.d/frontend_dev/: run
docker/s6-rc.d/init/: init.sh
docker/s6-rc.d/qcluster/: run
frontend/: .eslintignore  .eslintrc.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: Avatar.tsx  Button.tsx  DashboardNavBars.tsx  DashboardSidebar.tsx  DashboardTopBar.tsx  Dialog.tsx  DialogContent.tsx  DialogFooter.tsx  DialogTitle.tsx  ExternalLink.tsx  Fallback.tsx  LightBulbIcon.tsx  LinkButton.tsx  Notification.tsx  ProfileDropdown.tsx  SidebarNavMenuItem.tsx  SimplifiedNavbar.tsx  dashboard-icons.tsx
frontend/src/components/cookies/: OldCookieBanner.tsx
frontend/src/constants/: apiUrls.ts  staffNavigation.ts  urlsConfig.ts
frontend/src/layouts/: LayoutBackOffice.tsx  LayoutDefault.tsx
frontend/src/pages/Public/Home/: HeaderFragment.tsx  Index.tsx
frontend/src/stores/: useNotifyStore.ts
frontend/src/types/: CommonProps.ts  FlashMessage.ts  NavigationItem.ts  SvgIcon.ts  User.ts
frontend/src/utils/: buildUrl.ts  cookieNotice.ts  userPermissions.ts
